fixed overflowing price set option

--- a/public/css/catalogue.css
+++ b/public/css/catalogue.css
@@ -86,7 +86,7 @@ input[type="checkbox"] {
 }
 
 .price_text_input {
-    width: 80px;
+    width: 100%;
     height: 25px;
     border: 1px solid lightgray;
     border-radius: 5px;
